feat: add photo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img class="photo" src="#">
+    <img class="photo" src="./photo.jpg">
 </body>
 </html>
