--- a/index.html
+++ b/index.html
@@ -1,11 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <img class="photo" src="./photo.jpg">
-</body>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="assets/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <nav class="nav">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="#contacts" class="nav-link">contacts</a>
+            </li>
+            <li class="nav-item">
+              <a href="#summary" class="nav-link">summary</a>
+            </li>
+            <li class="nav-item">
+              <a href="#skills" class="nav-link">skills</a>
+            </li>
+            <li class="nav-item"><a href="#code" class="nav-link">code</a></li>
+            <li class="nav-item">
+              <a href="#courses" class="nav-link">courses</a>
+            </li>
+            <li class="nav-item">
+              <a href="#projects" class="nav-link">projects</a>
+            </li>
+            <li class="nav-item">
+              <a href="#english" class="nav-link">english</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main class="main">
+      <div class="container main-container">
+        <section class="section" id="profile">
+          <h1 class="section-title">Valeria Kolesnikova</h1>
+          <img class="photo" src="./assets/img/photo.jpg" alt="my photo" />
+        </section>
+        <section class="section" id="contacts">
+          <h2 class="section-title">Contacts</h2>
+          <ul>
+            <li>Telegram: @leramana</li>
+            <li>valeriiakolesnikova21@gmail.com</li>
+          </ul>
+        </section>
+        <section class="section" id="summary">
+          <h2 class="section-title">Briefly About Myself</h2>
+          <p>
+            My goal is to get a lot of frontend development practice and improve
+            my skills.
+          </p>
+        </section>
+        <section class="section" id="skills">
+          <h2 class="section-title">Skills and Proficiency</h2>
+          <ul>
+            <li>HTML5, CSS3</li>
+            <li>JavaScript, React</li>
+            <li>Git, GitHub</li>
+            <li>VS Code</li>
+          </ul>
+        </section>
+        <section class="section" id="code">
+          <h2 class="section-title">Code example</h2>
+          <code>
+            <pre>
+              "function sum(a, b) {
+                return a + b;
+              }
+              
+              let result = sum(1, 2);
+              alert( result );"              
+            </pre>
+          </code>
+        </section>
+        <section class="section" id="courses">
+          <h2 class="section-title">Courses</h2>
+          <ul>
+            <li>GeekBrains - profession front-end developer</li>
+            <li>Udemy Modern React with Redux 2024 Update (in progress</li>
+            <li>RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
+          </ul>
+        </section>
+        <section class="section" id="projects">
+          <h2 class="section-title">Educational project</h2>
+          <p>Development of a diploma project - creation of a service for managers of an online store of industrial equipment: <a href="https://github.com/Lera2022/diploma-project">link to GitHub</a>
+</p>
+        </section>
+        </section>
+        <section class="section" id="english">
+          <h2 class="section-title">Languages</h2>
+          <ul>
+            <li>English - Intermediate - worked in the UK and also lived in several English-speaking countrie</li>
+            <li>Russian - Native</li>
+          </ul>
+        </section>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <ul class="footer-links">
+          <li><a href="https://github.com/Lera2022">My GitHub</a></li>
+          <li>2024</li>
+          <li><a href="https://rs.school/courses/javascript-ru">JS course</a></li>
+          <li><img src="./assets/img/RSlogo.svg" alt="RSSchool-logo" width="40px"></li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
