--- a/index.html
+++ b/index.html
@@ -72,14 +72,8 @@
         <section class="section" id="code">
           <h2 class="section-title">Code example</h2>
           <code>
-            <pre>
-              "function sum(a, b) {
-                return a + b;
-              }
-              
-              let result = sum(1, 2);
-              alert( result );"              
-            </pre>
+            "function sum(a, b) { return a + b; } let result = sum(1, 2); alert(
+            result );"
           </code>
         </section>
         <section class="section" id="courses">
@@ -87,19 +81,28 @@
           <ul>
             <li>GeekBrains - profession front-end developer</li>
             <li>Udemy Modern React with Redux 2024 Update (in progress</li>
-            <li>RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
+            <li>
+              RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)
+            </li>
           </ul>
         </section>
         <section class="section" id="projects">
           <h2 class="section-title">Educational project</h2>
-          <p>Development of a diploma project - creation of a service for managers of an online store of industrial equipment: <a href="https://github.com/Lera2022/diploma-project">link to GitHub</a>
-</p>
-        </section>
+          <p>
+            Development of a diploma project - creation of a service for
+            managers of an online store of industrial equipment:
+            <a href="https://github.com/Lera2022/diploma-project"
+              >link to GitHub</a
+            >
+          </p>
         </section>
         <section class="section" id="english">
           <h2 class="section-title">Languages</h2>
           <ul>
-            <li>English - Intermediate - worked in the UK and also lived in several English-speaking countrie</li>
+            <li>
+              English - Intermediate - worked in the UK and also lived in
+              several English-speaking countrie
+            </li>
             <li>Russian - Native</li>
           </ul>
         </section>
@@ -110,8 +113,16 @@
         <ul class="footer-links">
           <li><a href="https://github.com/Lera2022">My GitHub</a></li>
           <li>2024</li>
-          <li><a href="https://rs.school/courses/javascript-ru">JS course</a></li>
-          <li><img src="./assets/img/RSlogo.svg" alt="RSSchool-logo" width="40px"></li>
+          <li>
+            <a href="https://rs.school/courses/javascript-ru">JS course</a>
+          </li>
+          <li>
+            <img
+              class="img-logo"
+              src="./assets/img/RSlogo.svg"
+              alt="RSSchool-logo"
+            />
+          </li>
         </ul>
       </div>
     </footer>
